--- a/_data/education.yml
+++ b/_data/education.yml
@@ -4,3 +4,10 @@
   year: June, 2014 &mdash; January, 2015
   # awards:
   # summary:
+
+# Degree
+- degree: Software Development
+  uni: NAIT
+  year: June, 2019 &mdash; January, 2022
+  # awards: 410
+  # summary: I won a lot of awards
